--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head></head>
   <body>
-    <div id="app">
+    <div class="app">
       {{message}}
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
