--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head></head>
   <body>
     <div class="app">
-      {{message}}
+      Hello {{message}}
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
     <script src="main.js"></script>
